--- a/LayoutTests/inspector/console/console-big-array.html
+++ b/LayoutTests/inspector/console/console-big-array.html
@@ -100,7 +100,7 @@ function test()
 
     function completeTest()
     {
-        InspectorTest.addResult(InspectorTest.textContentWithLineBreaks(WebInspector.consoleView.topGroup.element));
+        InspectorTest.addResult(InspectorTest.textContentWithLineBreaks(WebInspector.ConsolePanel._view().topGroup.element));
         InspectorTest.completeTest();
     }
 }
