--- a/LayoutTests/inspector/console/console-filter-test.html
+++ b/LayoutTests/inspector/console/console-filter-test.html
@@ -43,12 +43,12 @@ function onload()
 
 function test()
 {
-    var messagesElement = WebInspector.consoleView.messagesElement;
+    var messagesElement = WebInspector.ConsolePanel._view().messagesElement;
 
     function dumpVisibleMessages(root, indent)
     {
         indent = indent || "";
-        root = root || WebInspector.consoleView.topGroup.element; // .console-group
+        root = root || WebInspector.ConsolePanel._view().topGroup.element; // .console-group
         var children = root.childNodes;
 
         for (var i = 0; i < children.length; i++) {
@@ -81,31 +81,31 @@ function test()
         },
         function addURL1Filter(next)
         {
-            WebInspector.consoleView._filter.addMessageURLFilter(url1);
+            WebInspector.ConsolePanel._view()._filter.addMessageURLFilter(url1);
             dumpVisibleMessages();
             next();
         },
         function addURL2Filter(next)
         {
-            WebInspector.consoleView._filter.addMessageURLFilter(url2);
+            WebInspector.ConsolePanel._view()._filter.addMessageURLFilter(url2);
             dumpVisibleMessages();
             next();
         },
         function removeURL1Filter(next)
         {
-            WebInspector.consoleView._filter.removeMessageURLFilter(url1);
+            WebInspector.ConsolePanel._view()._filter.removeMessageURLFilter(url1);
             dumpVisibleMessages();
             next();
         },
         function restoreURL1Filter(next)
         {
-            WebInspector.consoleView._filter.addMessageURLFilter(url1);
+            WebInspector.ConsolePanel._view()._filter.addMessageURLFilter(url1);
             dumpVisibleMessages();
             next();
         },
         function removeAllFilters(next)
         {
-            WebInspector.consoleView._filter.removeMessageURLFilter();
+            WebInspector.ConsolePanel._view()._filter.removeMessageURLFilter();
             dumpVisibleMessages();
             next();
         }
