--- a/LayoutTests/inspector/console/console-stack-overflow.html
+++ b/LayoutTests/inspector/console/console-stack-overflow.html
@@ -19,7 +19,7 @@ function test()
 
     function step2()
     {
-        if (WebInspector.consoleView._visibleMessagesIndices.length < 1)
+        if (WebInspector.ConsolePanel._view()._visibleMessagesIndices.length < 1)
             InspectorTest.addConsoleSniffer(step2);
         else
             step3();
