--- a/LayoutTests/inspector/console/console-uncaught-exception-in-eval.html
+++ b/LayoutTests/inspector/console/console-uncaught-exception-in-eval.html
@@ -42,7 +42,7 @@ function test()
 
     function step3()
     {
-        if (WebInspector.consoleView._visibleMessagesIndices < 2)
+        if (WebInspector.ConsolePanel._view()._visibleMessagesIndices < 2)
             InspectorTest.addConsoleSniffer(step3);
         else
             step4();
