Add additional test to verify that setMediaKeys() can be called before setting .src on HTMLMediaElement.
BUG=349546
TEST=new layout test passes

Review URL: https://codereview.chromium.org/189583002

git-svn-id: svn://svn.chromium.org/blink/trunk@168863 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/media/encrypted-media/encrypted-media-playback-setmediakeys-before-src.html
+++ b/LayoutTests/media/encrypted-media/encrypted-media-playback-setmediakeys-before-src.html
@@ -73,10 +73,10 @@
                 waitForEventAndRunStep("needkey", video, onNeedKey, test);
                 waitForEventAndRunStep("playing", video, onPlaying, test);
 
-                video.src = "../content/test-encrypted.webm";
                 video.setMediaKeys(mediaKeys);
+                video.src = "../content/test-encrypted.webm";
                 video.play();
-            }, "Playback using Clear Key key system.");
+            }, "Playback using Clear Key key system, calling setMediaKeys() before setting src attribute.");
         </script>
     </body>
 </html>
