--- a/LayoutTests/animations/interpolation/shape-outside.html
+++ b/LayoutTests/animations/interpolation/shape-outside.html
@@ -101,7 +101,7 @@ assertInterpolation({
   to: 'circle(30% at right 20% bottom 30px)',
 }, [
   {at: 0, is: 'circle(20% at right 10% bottom 20px)'},
-  {at: 0.5, is: 'circle(25% at right 15% bottom 25px)'},
+  {at: 0.5, is: 'circle(25% at left 85% bottom 25px)'},
   {at: 1, is: 'circle(30% at right 20% bottom 30px)'},
 ]);
 </script>
