[webcrypto] Change the order of usages in Key.usages.
Blink's implementation used to list them in lexicographic order. Changed to match the order defined by the spec in:
https://dvcs.w3.org/hg/webcrypto-api/rev/ca494eeb8ddf

BUG=245025

Review URL: https://codereview.chromium.org/194323002

git-svn-id: svn://svn.chromium.org/blink/trunk@168904 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/crypto/encrypt-decrypt.html
+++ b/LayoutTests/crypto/encrypt-decrypt.html
@@ -152,7 +152,7 @@ function runAesCbcSuccessTestCase(testCase)
         shouldBe("tmpKey.extractable", "false");
         shouldBe("tmpKey.algorithm.name", "'AES-CBC'");
         shouldBe("tmpKey.algorithm.length", (keyData.byteLength * 8).toString());
-        shouldBe("tmpKey.usages.join(',')", "'decrypt,encrypt'");
+        shouldBe("tmpKey.usages.join(',')", "'encrypt,decrypt'");
 
         // (2) Encrypt.
         return crypto.subtle.encrypt(algorithm, key, hexStringToUint8Array(testCase.plainText));
@@ -189,7 +189,7 @@ function runAesGcmSuccessTestCase(testCase)
         shouldBe("tmpKey.type", "'secret'");
         shouldBe("tmpKey.extractable", "false");
         shouldBe("tmpKey.algorithm.name", "'AES-GCM'");
-        shouldBe("tmpKey.usages.join(',')", "'decrypt,encrypt'");
+        shouldBe("tmpKey.usages.join(',')", "'encrypt,decrypt'");
 
         // (2) Encrypt.
         return crypto.subtle.encrypt(algorithm, key, hexStringToUint8Array(testCase.plainText));
