TimelinePanel: restore selectedRecord behevior by removing windowFilter.
BUG=
R=pfeldman@chromium.org

Review URL: https://codereview.chromium.org/194713007

git-svn-id: svn://svn.chromium.org/blink/trunk@168926 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/timeline/timeline-window-filter.html
+++ b/LayoutTests/inspector/timeline/timeline-window-filter.html
@@ -31,7 +31,7 @@ function test()
         view._refresh();
         InspectorTest.addResult("mode = " + timeline._presentationModeSetting.get());
         InspectorTest.addResult("range = " + windowLeft + " - " + windowRight);
-        InspectorTest.addResult("time range = " + timeline._windowFilter._windowStartTime + " - " + timeline._windowFilter._windowEndTime);
+        InspectorTest.addResult("time range = " + view._windowStartTime + " - " + view._windowEndTime);
         InspectorTest.addResult("records count: " + view._presentationModel.filteredRecords().length);
         InspectorTest.addResult("");
     }
@@ -55,18 +55,18 @@ function test()
 
     InspectorTest.addResult("--------------------------------------------------------");
     InspectorTest.addResult("mode = " + timeline._presentationModeSetting.get());
-    InspectorTest.addResult("time range = " + timeline._windowFilter._windowStartTime + " - " + timeline._windowFilter._windowEndTime);
+    InspectorTest.addResult("time range = " + timeline._windowStartTime + " - " + timeline._windowEndTime);
     timeline._selectPresentationMode(WebInspector.TimelinePanel.Mode.Events);
     InspectorTest.addResult("");
 
     InspectorTest.addResult("mode = " + timeline._presentationModeSetting.get());
-    InspectorTest.addResult("time range = " + timeline._windowFilter._windowStartTime + " - " + timeline._windowFilter._windowEndTime);
+    InspectorTest.addResult("time range = " + timeline._windowStartTime + " - " + timeline._windowEndTime);
     timeline._selectPresentationMode(WebInspector.TimelinePanel.Mode.Memory);
     
     InspectorTest.addResult("");
 
     InspectorTest.addResult("mode = " + timeline._presentationModeSetting.get());
-    InspectorTest.addResult("time range = " + timeline._windowFilter._windowStartTime + " - " + timeline._windowFilter._windowEndTime);
+    InspectorTest.addResult("time range = " + timeline._windowStartTime + " - " + timeline._windowEndTime);
     timeline._selectPresentationMode(WebInspector.TimelinePanel.Mode.Frames);
 
     InspectorTest.completeTest();
