--- a/LayoutTests/inspector/sources/debugger/debug-inlined-scripts.html
+++ b/LayoutTests/inspector/sources/debugger/debug-inlined-scripts.html
@@ -19,7 +19,14 @@ f4();
 
 var test = function()
 {
+    var panel = WebInspector.panel("sources");
     InspectorTest.startDebuggerTest(step1, true);
+
+    function callstackStatus()
+    {
+        var statusElement = panel.sidebarPanes.callstack._statusMessageElement;
+        return statusElement ? statusElement.textContent : "";
+    }
 
     function step1()
     {
@@ -39,6 +46,7 @@ var test = function()
     {
         InspectorTest.addResult("Script execution paused.");
         InspectorTest.captureStackTrace(callFrames);
+        InspectorTest.addResult("Call stack status: " + callstackStatus());
         InspectorTest.showScriptSource("debug-inlined-scripts.html", step4);
     }
 
