Make any sort of ligatures, not just common ligatures, use the complex text path.
We can remove the incorrect hack in the layout test that used
common-ligatures, which forces the complex path.

BUG=22240

Review URL: https://codereview.chromium.org/193033003

git-svn-id: svn://svn.chromium.org/blink/trunk@168944 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/text/font-variant-ligatures.html
+++ b/LayoutTests/fast/text/font-variant-ligatures.html
@@ -11,10 +11,10 @@
     .common-ligatures-disabled { font-variant-ligatures: no-common-ligatures; }
     .common-ligatures-enabled { font-variant-ligatures: common-ligatures; }
     .common-ligatures-normal { font-variant-ligatures: normal; }
-    .discretionary-ligatures-disabled { font-variant-ligatures: common-ligatures no-discretionary-ligatures; }
-    .discretionary-ligatures-enabled { font-variant-ligatures: common-ligatures discretionary-ligatures; }
-    .historical-ligatures-disabled { font-variant-ligatures: common-ligatures no-historical-ligatures; }
-    .historical-ligatures-enabled { font-variant-ligatures: common-ligatures historical-ligatures; }
+    .discretionary-ligatures-disabled { font-variant-ligatures: no-discretionary-ligatures; }
+    .discretionary-ligatures-enabled { font-variant-ligatures: discretionary-ligatures; }
+    .historical-ligatures-disabled { font-variant-ligatures: no-historical-ligatures; }
+    .historical-ligatures-enabled { font-variant-ligatures: historical-ligatures; }
 </style>
 <body>
     <div>
