DevTools: Move WebInspector.{log,showErrorMessage} into ConsoleModel.
Drive-by: Remove obsolete code making sure log() works when
there is no WebInspector.console available.

R=eustas, pfeldman, vsevik

Review URL: https://codereview.chromium.org/197073005

git-svn-id: svn://svn.chromium.org/blink/trunk@169016 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/profiler/heap-snapshot-loader.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-loader.html
@@ -37,8 +37,8 @@ function test()
         profileType._takeHeapSnapshot(function() {});
     }
 
-    WebInspector.log = function(message) {
-        InspectorTest.addResult("WebInspector.log: " + message);
+    WebInspector.console.log = function(message) {
+        InspectorTest.addResult("WebInspector.console.log: " + message);
     }
 
     InspectorTest.runTestSuite([
