--- a/LayoutTests/fast/css-grid-layout/grid-item-named-grid-line-resolution.html
+++ b/LayoutTests/fast/css-grid-layout/grid-item-named-grid-line-resolution.html
@@ -13,6 +13,11 @@
     grid-template-rows: (g) 50px (g) 100px (g) 200px (g);
 }
 
+.gridFromSpecs {
+    grid-template-columns: (A) 10px (B) 20px (C) 30px (A) 40px (B) 50px (C) 60px (A) 70px (B) 80px (C);
+    grid-template-rows: 100px;
+}
+
 .gridItemBToD {
     grid-column: 'b' / 'd';
     grid-row: 1;
@@ -150,6 +155,66 @@
 <div style="position: relative">
     <div class="grid gridWithRepeat">
         <div class="sizedToGridArea gridItemSpan2GNegativeG" data-offset-x="0" data-offset-y="50" data-expected-width="50" data-expected-height="300"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 4 / auto;" data-offset-x="60px" data-expected-width="40px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: auto / 6;" data-offset-x="100px" data-expected-width="50px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 'C' / 'C' -1;" data-offset-x="30px" data-expected-width="330px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 'C' / span 'C';" data-offset-x="30px" data-expected-width="120px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: span 'C' / 'C' -1;" data-offset-x="150px" data-expected-width="210px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: span 'C' / span 'C';" data-offset-x="0px" data-expected-width="10px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 5 / 'C' -1;" data-offset-x="100px" data-expected-width="260px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 5 / span 'C';" data-offset-x="100px" data-expected-width="50px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 8 / 8;" data-offset-x="280px" data-expected-width="80px"></div>
+    </div>
+</div>
+
+<div style="position: relative">
+    <div class="grid gridFromSpecs">
+      <div class="sizedToGridArea" style="grid-column: 'B' 2 / span 1;" data-offset-x="100px" data-expected-width="50px"></div>
     </div>
 </div>
 
