DevTools: Calculate JS Arrays size only in heap snapshot statistics.
Previously it calculated the size of all arrays, which is not very
informative to the user as lots of objects are arrays internally.

Review URL: https://codereview.chromium.org/195313002

git-svn-id: svn://svn.chromium.org/blink/trunk@169060 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/profiler/heap-snapshot-statistics.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-statistics.html
@@ -18,6 +18,10 @@ function test()
             InspectorTest.addResult(type + " node size: " + size);
             builder.rootNode.linkNode(node, InspectorTest.HeapEdge.Type.internal, type + "Link");
         }
+        var jsArrayNode = new InspectorTest.HeapNode("Array", 8, InspectorTest.HeapNode.Type.object);
+        builder.rootNode.linkNode(jsArrayNode, InspectorTest.HeapEdge.Type.internal, "JSArrayLink");
+        var jsArrayContentsNode = new InspectorTest.HeapNode("", 12, InspectorTest.HeapNode.Type.array);
+        jsArrayNode.linkNode(jsArrayContentsNode, InspectorTest.HeapEdge.Type.internal, "elements");
         return builder.generateSnapshot();
     }
 
