--- a/LayoutTests/fast/dom/shadow/cascade-of-treeboundary-crossing-rules.html
+++ b/LayoutTests/fast/dom/shadow/cascade-of-treeboundary-crossing-rules.html
@@ -36,26 +36,6 @@ function cleanUp()
 
 description('Test for casacde of treeboundary crossing rules.');
 
-// Rules declared in inner treescope should win.
-sandbox.appendChild(
-    createDOM('div', {'id': 'host'},
-        createDOM('style', {},
-            document.createTextNode('p:empty { border: 1px solid blue; }')),
-        createShadowRoot(
-            createDOM('style', {},
-                document.createTextNode('::content > p { border: 1px solid red; }')),
-            createDOM('div', {},
-                createShadowRoot(
-                    createDOM('style', {},
-                        document.createTextNode('::content > p { border: 1px solid green; }')),
-                    createDOM('content', {})),
-                createDOM('content', {}))),
-        createDOM('p', {'id': 'target'})));
-
-borderColorShouldBe('target', 'rgb(0, 128, 0)');
-
-cleanUp();
-
 // Rules declared in outer treescope should win.
 sandbox.appendChild(
     createDOM('div', {},
@@ -77,24 +57,47 @@ borderColorShouldBe('host/host2/target', 'rgb(0, 128, 0)');
 
 cleanUp();
 
+// Test for /content/.
+
+// Rules declared in inner treescope should win.
+// div > p and content /content/ p have the same specificity.
+sandbox.appendChild(
+    createDOM('div', {'id': 'host'},
+        createDOM('style', {},
+            document.createTextNode('div > p { border: 1px solid blue; }')),
+        createShadowRoot(
+            createDOM('style', {},
+                document.createTextNode('content /content/ p { border: 1px solid red; }')),
+            createDOM('div', {},
+                createShadowRoot(
+                    createDOM('style', {},
+                        document.createTextNode('content /content/ p { border: 1px solid green; }')),
+                    createDOM('content', {})),
+                createDOM('content', {}))),
+        createDOM('p', {'id': 'target'})));
+
+borderColorShouldBe('target', 'rgb(0, 128, 0)');
+
+cleanUp();
+
 // Comparing rules declared in outer treescope with rules declared in inner treescope.
 // Outer's should win.
 sandbox.appendChild(
     createDOM('div', {},
         createDOM('style', {},
-            document.createTextNode('div /shadow-deep/ p:empty { border: 1px solid green; }')),
+            document.createTextNode('div /shadow-deep/ p { border: 1px solid green; }')),
         createDOM('div', {'id': 'host'},
             createShadowRoot(
                 createDOM('div', {},
                     createDOM('style', {},
-                        document.createTextNode('div > p:empty { border: 1px solid blue; }')),
+                        document.createTextNode('div > p { border: 1px solid blue; }')),
                     createShadowRoot(
                         createDOM('style', {},
-                            document.createTextNode('content::content > p { border: 1px solid red; }')),
+                            document.createTextNode('content /content/ p { border: 1px solid red; }')),
                         createDOM('div', {},
                             createShadowRoot(
                                 createDOM('style', {},
-                                    document.createTextNode('content::content > p { border: 1px solid yellow; }')),
+                                    document.createTextNode('content /content/ p { border: 1px solid yellow; }')),
                                 createDOM('content', {})),
                             createDOM('content', {}))),
                     createDOM('p', {'id': 'target'}))))));
